--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
         text-align: center;
       }
       .custom-button{
-        width: 60%;
+        width: 65%;
       }
       .icons{
         text-align: center !important;
-        margin-bottom: 1em;
+        margin-bottom: 1.5em;
       }
 
     }
   </style>
 </head>
 <body>
-  <header class="p-5 mb-2 my-header"><img src="images/logo.svg" alt=""> </header>
+  <header class="p-5 mb-3 my-header"><img src="images/logo.svg" alt=""> </header>
 
   <main class="row w-100 m-auto justify-content-center align-items-center p-3">
 
@@ -63,15 +63,15 @@
         Create connections with your users as you engage in genuine discussion. 
       </p>
 
-      <button class="btn btn-light rounded-pill custom-button">Register</button>
+      <button class="btn btn-light rounded-pill custom-button mt-1">Register</button>
     </div>
 
   </main>
 
   <div class="footer position-relative icons text-white text-end
    px-5">
-    <i class="bi bi-facebook mx-2 lead"></i>
-    <i class="bi bi-twitter mx-2 lead"></i>
+    <i class="bi bi-facebook mx-3 lead"></i>
+    <i class="bi bi-twitter mx-3 lead"></i>
     <i class="bi bi-instagram ms-2 lead"></i>
   </div>
 
