--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
   <div class="footer position-relative icons text-white text-end
    px-5">
-    <i class="bi bi-facebook mx-3 lead"></i>
-    <i class="bi bi-twitter mx-3 lead"></i>
-    <i class="bi bi-instagram ms-2 lead"></i>
+    <a href="https://www.facebook.com/timzygold.gold.9/"><i class="bi bi-facebook mx-3 lead"></i></a>
+    <a href="https://github.com/Timilovic/challenge13"><i class="bi bi-github mx-3 lead"></i></a>
+    <a href="https://www.linkedin.com/in/dedeke-timilehin-855b48302/"><i class="bi bi-linkedin ms-2 lead"></i></a>
   </div>
 
   <footer>
