--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         Create connections with your users as you engage in genuine discussion. 
       </p>
 
-      <button class="btn btn-light rounded-pill custom-button mt-1">Register</button>
+      <button class="btn btn-light rounded-pill custom-button mt-1 px-5">Register</button>
     </div>
 
   </main>
