--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.4/css/boxicons.min.css" integrity="sha512-cn16Qw8mzTBKpu08X0fwhTSv02kK/FojjNLz0bwp2xJ4H+yalwzXKFw/5cLzuBZCxGWIA+95X4skzvo8STNtSg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -19,6 +20,19 @@
     }
     .my-custom{
       width: 40%;
+    }
+    .my-custom-button{
+      box-shadow: 2px 1px  10px rgba(58, 58, 58, 0.836);
+    }
+    .my-custom-button:hover{
+      background: hsl(300, 69%, 71%);
+      border-color: hsl(300, 69%, 71%);
+      color: white;
+      box-shadow: 2px 2px  15px rgba(58, 58, 58, 0.836);
+    }
+    i:hover{
+      border-color: hsl(300, 69%, 71%) !important;
+      color: hsl(300, 69%, 71%) !important;
     }
     @media screen and (max-width:470px) {
       .my-header{
@@ -35,8 +49,11 @@
         width: 100% !important;
         text-align: center;
       }
-      .custom-button{
+      .my-custom-button{
         width: 65%;
+      }
+      .my-custom-button:hover{
+        background-color: hsl(300, 69%, 71%) !important;
       }
       .icons{
         text-align: center !important;
@@ -63,16 +80,16 @@
         Create connections with your users as you engage in genuine discussion. 
       </p>
 
-      <button class="btn btn-light rounded-pill custom-button mt-1 px-5">Register</button>
+      <button class="btn btn-light rounded-pill my-custom-button mt-1 px-5">Register</button>
     </div>
 
   </main>
 
   <div class="footer position-relative icons text-white text-end
    px-5">
-    <a href="https://www.facebook.com/timzygold.gold.9/"><i class="bi bi-facebook mx-3 lead"></i></a>
-    <a href="https://github.com/Timilovic/challenge13"><i class="bi bi-github mx-3 lead"></i></a>
-    <a href="https://www.linkedin.com/in/dedeke-timilehin-855b48302/"><i class="bi bi-linkedin ms-2 lead"></i></a>
+    <a href="https://www.facebook.com/timzygold.gold.9/"><i class='bx bxl-facebook lead text-white border rounded-circle p-1'></i></a>
+    <a href="https://github.com/Timilovic/challenge13"><i class="bx bxl-twitter mx-3 lead text-white border rounded-circle p-1"></i></a>
+    <a href="https://www.linkedin.com/in/dedeke-timilehin-855b48302/"><i class="bx bxl-instagram text-white border rounded-circle p-1 ms-2 lead"></i></a>
   </div>
 
   <footer>
